--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@types/node": "^12.6.8"
+    "@types/node": "^12.6.8",
+    "axios": "^1.4.0"
   },
   "author": "",
   "license": "ISC"
