--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "dependencies": {
     "@types/node": "^12.6.8",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "@types/react": "^18.2.14"
+  }
 }
